force-app/main/default/objects/PMC_CPQ_SalesRegionRangeSetting__mdt/PMC_CPQ_SalesRegionRangeSetting__mdt.object-meta.xml
<CustomObject>
    <description>This is to configure Sales Region ranges.</description>
    <label>Sales Region Range Setting</label>
    <pluralLabel>Sales Region Range Settings</pluralLabel>
</CustomObject>