force-app/main/default/objects/PMC_CPQ_SalesRegionRangeSetting__mdt/fields/PMC_CPQ_EndValue__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_EndValue__c</fullName>
    <description>End Value of the Sales Region range</description>
    <inlineHelpText>End value is included in range.</inlineHelpText>
    <label>End Value</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>