force-app/main/default/objects/PMC_CPQ_SalesRegionRangeSetting__mdt/fields/PMC_CPQ_Region__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brazil</fullName>
            </value>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>North America</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
                <isActive>false</isActive>
                <label>Canada</label>
            </value>
            <value>
                <fullName>US</fullName>
                <isActive>false</isActive>
                <label>US</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>