force-app/main/default/objects/PMC_CPQ_SalesRegionRangeSetting__mdt/fields/PMC_CPQ_StartValue__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_StartValue__c</fullName>
    <description>Start value of the Sales Region Range.</description>
    <inlineHelpText>Start value is included in range.</inlineHelpText>
    <label>Start Value</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>